Fix all image file names and paths

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
 
         <header class="site-header">
-            <img class="logo" src="assets/images/breakfast wheel-logo-transparent.png" alt="Breakfast Wheel logo">
+            <img class="logo" src="assets/images/breakfast-wheel-logo-transparent.png" alt="Breakfast Wheel logo">
             <div class="mood-wrap">
                 <label for="mood" class="sr-only">Select mood</label>
                 <select id="mood" name="mood">
@@ -41,7 +41,7 @@
                     </article>
 
                     <article class="card" data-mood="healthy">
-                        <img src="assets/images/avocado and bread with eggs.webp" alt="Avocado toast with poached eggs">
+                        <img src="assets/images/avocado-and-egg-with-bread.webp" alt="Avocado toast with poached eggs">
                         <div class="card-body">
                             <h3>Avocado Toast</h3>
                             <p class="meta">Healthy • 340 kcal</p>
@@ -49,7 +49,7 @@
                     </article>
 
                     <article class="card" data-mood="comfort">
-                        <img src="assets/images/fried eggs and plantain.webp" alt="Fried eggs with sweet plantain">
+                        <img src="assets/images/fried-eggs-and-plantain.webp" alt="Fried eggs with sweet plantain">
                         <div class="card-body">
                             <h3>Eggs & Plantain</h3>
                             <p class="meta">Comfort • 410 kcal</p>
@@ -65,7 +65,7 @@
                     </article>
 
                     <article class="card" data-mood="comfort">
-                        <img src="assets/images/beans and plantain.webp" alt="Beans and fried plantain">
+                        <img src="assets/images/beans-and-plantain.webp" alt="Beans and fried plantain">
                         <div class="card-body">
                             <h3>Beans & Plantain</h3>
                             <p class="meta">Hearty • 540 kcal</p>
@@ -73,7 +73,7 @@
                     </article>
 
                     <article class="card" data-mood="healthy">
-                        <img src="assets/images/yam with egg sauce.webp" alt="Yam with egg sauce">
+                        <img src="assets/images/yam-with-egg-sauce.webp" alt="Yam with egg sauce">
                         <div class="card-body">
                             <h3>Yam & Egg Sauce</h3>
                             <p class="meta">Protein-rich • 400 kcal</p>
@@ -81,7 +81,7 @@
                     </article>
 
                     <article class="card" data-mood="rushed">
-                        <img src="assets/images/avocado and bread with eggs.webp" alt="Quick breakfast toast">
+                        <img src="assets/images/avocado-and-egg-with-bread.webp" alt="Quick breakfast toast">
                         <div class="card-body">
                             <h3>Quick Toast</h3>
                             <p class="meta">Fast • 280 kcal</p>
